# PokemonClone

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  README.txt  ToDo.md  tree
html/: _0gffaa07ff-example.html  _add_exp_state_8h.html  _add_exp_state_8h__dep__incl.map  _add_exp_state_8h__dep__incl.md5  _add_exp_state_8h__incl.map  _add_exp_state_8h__incl.md5  _add_exp_state_8h_source.html  _animation_8h.html  _animation_8h__dep__incl.map  _animation_8h__dep__incl.md5  _animation_8h__incl.map  _animation_8h__incl.md5  _animation_8h_source.html  _base_state_8h.html  _base_state_8h__dep__incl.map  _base_state_8h__dep__incl.md5  _base_state_8h__incl.map  _base_state_8h__incl.md5  _base_state_8h_source.html  _battle_8h.html  _battle_8h__dep__incl.map  _battle_8h__dep__incl.md5  _battle_8h__incl.map  _battle_8h__incl.md5  _battle_8h_source.html  _battle_dialog_state_8h.html  _battle_dialog_state_8h__dep__incl.map  _battle_dialog_state_8h__dep__incl.md5  _battle_dialog_state_8h__incl.map  _battle_dialog_state_8h__incl.md5  _battle_dialog_state_8h_source.html  _button_8h.html  _button_8h__dep__incl.map  _button_8h__dep__incl.md5  _button_8h__incl.map  _button_8h__incl.md5  _button_8h_source.html  _camera_8h.html  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  (+780 more)
html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+84 more)
include/: Animation.h  Battle.h  Camera.h  Game.h  Level.h  PhysicsMove.h  Resources.h  SoundTon.h  Stack.h  StateMachine.h  Tile.h  saveGame.h  saveManager.h  utilities.h
resources/: CMakeLists.txt  StartMap.map  battlePositionHelper.psd  firstTown.json  firstTown.tiled-session  firstTown.tmj  fourthMap.tmj  newSpriteSheet.sprites  playersSpriteSheet.png.txt  secondMap.tmj  sprites.xml  spritesheet.tsx  spritesheetpokemon copy.tsx  thirdMap.tmj
src/: CMakeLists.txt  Entity.cpp  main.cpp
(+31 files in other folders)
